# mcp-bugzilla

./: AGENTS.md  CHANGELOG.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: checks.yml  dependabot-automerge.yml  release.yml  tests.yml
src/mcp_bugzilla/: __init__.py  mcp_utils.py  server.py
tests/: test_cli.py  test_mcp_utils.py  test_server.py  test_transport.py
