[project]
name = "mcp-bugzilla"
version = "0.7.0"
description = "MCP server for Bugzilla"
readme = "README.md"
requires-python = "==3.13.*"

dependencies = [
    "fastmcp==2.13.1",
]

[project.optional-dependencies]
dev = [
    "uv",
    "pytest",
    "pytest-asyncio",
    "respx",
]

[project.scripts]
mcp-bugzilla = "mcp_bugzilla:main"

[tool.setuptools]
py-modules = ["mcp_utils", "server"]

[build-system]
requires = ["uv_build>=0.9.11,<0.10.0"]
build-backend = "uv_build"
