[project]
name = "mcp-bugzilla"
version = "0.12.1"
description = "MCP server for Bugzilla"
readme = "README.md"
requires-python = "==3.13.*"

dependencies = [
    "fastmcp==3.2.4",
    "httpx-retries>=0.5.0",
]

[project.optional-dependencies]
dev = [
    "uv",
    "pytest",
    "pytest-asyncio",
    "respx",
]

[project.scripts]
mcp-bugzilla = "mcp_bugzilla:main"

[tool.setuptools]
py-modules = ["mcp_utils", "server"]

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"
